src/objects/peer__Credit_Score__c.object
<CustomObject>
    <fields>
        <fullName>peer__Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Borrower__c</fullName>
        <label>Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Scores</relationshipLabel>
        <relationshipName>Credit_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Raw_Score__c</fullName>
        <label>Raw Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Credit Score</label>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>Credit Score Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>